Adding image+main page content
This is the first commit with a bootstrap layout.

--- a/templates/anon_home.html
+++ b/templates/anon_home.html
@@ -15,32 +15,23 @@
 <link href="../css/styles.css" rel="stylesheet" type="text/css">
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
-<body>
-	<!--  -->
-	<header class="header">
-	<nav role="navigation" class="navbar navbar-custom navbar-default navbar-fixed-top">
-	<div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-        <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </button>
-        <a href="#" class="navbar-brand-image"><img src="../img/prologes.png" alt="logo" class="navlogo logo"/></a>
-    </div>
-    <!-- Collection of nav links, forms, and other content for toggling -->
-    <div id="navbarCollapse" class="collapse navbar-collapse">
-        
-        <ul class="nav navbar-nav navbar-right">
-		<li class="dropdown">
-			<a data-toggle="dropdown" class="dropdown-toggle" href="#">
-				<div class="lang-selector">
-					<i class="material-icons">language</i>				
-				</div>
-			</a>
-			<ul role="menu" class="dropdown-menu">
+	
+<body background="../img/regal.png">
+	
+	<nav class="mb-1 navbar navbar-expand-lg">
+  <a class="navbar-brand" href="#">
+			<img src="../img/prologes.png" alt="logo" class="navlogo logo"/>
+		</a>
+		
+  <div class="collapse navbar-collapse" id="navbarSupportedContent-333">
+    
+    <ul class="navbar-nav navbar-right nav-flex-icons">
+		<li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown" aria-haspopup="true"
+          aria-expanded="false">
+          <i class="material-icons">language</i>
+        </a>
+        <ul role="menu" class="dropdown-menu">
 				<li>
 					<a href="#">English</a>
 					</li>
@@ -48,84 +39,53 @@
 					<a href="#">Español</a>
 					</li>
 			</ul>
-		</li>
-        
-            <!-- NOT LOGGED IN -->
-            			<i class="material-icons">person</i>
-		<!-- LOGGED IN -->
-		        </ul>
-    </div>
-    </div>
+      </li>
+		
+      <li class="nav-item">
+        <a class="nav-link">
+          <i class="material-icons">person</i>
+        </a>
+      </li>
+    </ul>
+  </div>
 </nav>
-	</header>
-		<!--  -->
-		<!-- Modal to search for books -->
-<div id="index-modal" class="modal fade">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<form action="search">
-				<div class="modal-header text-center">
-					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-					<h2 id="index-modal--header"></h2>
-				</div>
-				<div class="modal-body text-center">
-					<div class="index-modal--info">
-						<span id="index-modal--text"></span>
-					</div>
-					<div class="input-group index-modal--search">
-						<input class="form-control" type="text" name="q" id="index-modal--field">
-						<div class="input-group-btn">
-							<button type="submit" class="btn search-button" id="index-modal--submit">
-								<i class="fas fa-search"></i>
-							</button>
+
+	
+	<!-- Main -->
+	<div class="container-fluid">
+		<div class="row" >
+			<div class="col-md-6 col-md-offset-3">
+				<img class="bookshelf-image" src="../img/bookshelf.png" alt="Bookshelf"/>
+			</div>
+		</div>
+		
+		<div class="row">
+			<div class="col-md-8 col-md-offset-2">
+				<h1>Your online bookclub</h1>
+				
+				<p>Add books you want to read, discuss books you’re reading, get reading tips and write recommandations so other readers can find their next book!</p>
+			</div>
+		</div>
+		
+		<div class="row">
+			<div class="col-md-8 col-md-offset-2">
+				<div class="index-search center-block">
+					<form class="" action="search">
+						<div class="input-group">
+							<input class="form-control" id="index-search--field" type="text" name="q" placeholder="Find a book" />
+							<div class="input-group-btn">
+								<button class="btn btn-default" id="index-search--submit" type="submit">
+									<i class="glyphicon glyphicon-search"></i>
+								</button>
+							</div>
 						</div>
-					</div>
+	  				</form>
 				</div>
-			</form>
+			</div>
 		</div>
 	</div>
-</div>
-
-<!-- Main -->
-	<div class="row">
-		<div class="Your-online-bookclub">
-	</div>
-		
-			<!-- Que es Prologes -->
-			<div class="col-d-4">
-			  <div class="prlg-panel">
-					<div class="panel-header header text-center">
-						<div class="header-content">
-							<h1>Your online bookclub</h1>
-						</div>
-					</div>
-					<div class="welcome-whatis--body">
-						<p>Add books you want to read, discuss books you’re reading, get reading tips and write recommandations so other readers can find their next book!</p>
-					</div>
-
-				</div>
-									
-			</div>
-			
-			<!-- Algo random -->
-<div class="row">	
-	<div class="index-search center-block">
-		<form class="" action="search">
-			<div class="input-group">
-				<input class="form-control" id="index-search--field" type="text" name="q" placeholder="Find a book" />
-				<div class="input-group-btn">
-					<button class="btn btn-default" id="index-search--submit" type="submit">
-						<i class="glyphicon glyphicon-search"></i>
-					</button>
-				</div>
-			</div>
-	  </form>
-	</div>
-</div>
-</div>
 	
 <footer>
-	
 	<div class="container">
 		<h5>Prologes &copy; 2019 
 			<ul class="pull-right list-inline">
