--- a/css/styles.less
+++ b/css/styles.less
@@ -66,7 +66,6 @@ body {
 }
 
 /* Here goees the navbar */
-.header {
 
 	.navbar {
 		background-color: @prologes-nav-background;
@@ -74,24 +73,16 @@ body {
 		border-color: @prologes-nav-border;
 		border-radius: 0;
 
-		img.logo {
-			height: 3em;
-			position: relative;
-			top: 10px;
-			left: 6px;
+		.logo {
+			height: 25px;
 		}
-
-		.navbar-nav > li > a {
-			color: @prologes-nav-color;
+		
+		.navbar-nav {
+			list-style-type: none;
 		}
 	}
-}
 
 // Container is the main body
-.container {;
-	position: relative;
-}
-
 .prlg-panel {
 	font-family: Lora;
 	text-align: center;
@@ -184,51 +175,6 @@ body {
 	align-items: center;
 }
 
-.nav-tabs.underline-tabs {
-	margin: 1em;
-	background-color: #fafafa;
-	border-bottom: none;
-	font-size: 16px;
-
-	li.active > a {
-		background-color: #fafafa;
-		outline: none;
-		border: none;
-		border-bottom: 5px solid #173e43;
-
-		&:hover,
-		&:focus {
-			background-color: #fafafa;
-			border: none;
-			border-bottom: 5px solid #3fb0ac;
-		}
-	}
-
-	li > a {
-		outline: none;
-		border: none;
-
-		&:hover,
-		&:focus {
-			border: none;
-			background-color: #fafafa;
-			border-bottom: 5px solid #3fb0ac;
-		}
-	}
-}
-
-.side-tab-panel {
-	//
-
-	.tab-content {
-		background-color: #fff;
-		border: 1px solid #e4e4e4;
-		border-top: 0;
-		border-bottom-right-radius: 4px;
-		border-bottom-left-radius: 4px;
-	}
-}
-
 .prologe {
 	.rating {
 		display: flex;
@@ -272,14 +218,22 @@ body {
   }
 }
 
+
 .header-content {
 	font-family: Lora;
+	font-size: 36px;
 }
 
 .welcome-whatis--body {
 	font-family: Raleway;
+	margin: auto;
+	padding-bottom: 30px;
 }
 
 .index-search {
-	width: 400px;
+	padding-bottom: 120px;
+}
+
+.bookshelf-image {	
+	max-width: 100%;
 }
