--- a/templates/anon_home.html
+++ b/templates/anon_home.html
@@ -18,7 +18,7 @@
 	
 <body background="../img/regal.png">
 	
-	<nav class="mb-1 navbar navbar-expand-lg">
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">
 			<img src="../img/prologes.png" alt="logo" class="navlogo logo"/>
 		</a>
@@ -26,25 +26,25 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent-333">
     
     <ul class="navbar-nav navbar-right nav-flex-icons">
-		<li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown" aria-haspopup="true"
-          aria-expanded="false">
-          <i class="material-icons">language</i>
-        </a>
-        <ul role="menu" class="dropdown-menu">
-				<li>
-					<a href="#">English</a>
-					</li>
-				<li>
-					<a href="#">Español</a>
-					</li>
-			</ul>
-      </li>
+		<li class="nav-item">
+        	<a class="nav-link">
+          		<i class="material-icons">person</i>
+        	</a>
+      	</li>
 		
-      <li class="nav-item">
-        <a class="nav-link">
-          <i class="material-icons">person</i>
-        </a>
+		<li class="nav-item dropdown">
+        	<a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown" aria-haspopup="true"
+          aria-expanded="false">
+         		 <i class="material-icons">language</i>
+        	</a>
+      <ul role="menu" class="dropdown-menu">
+		<li>
+			<a href="#">English</a>
+		</li>
+		<li>
+			<a href="#">Español</a>
+		</li>
+	</ul>
       </li>
     </ul>
   </div>
