USer and profiles in responsive environments

--- a/css/profile.less
+++ b/css/profile.less
@@ -2,6 +2,11 @@
 .main-profile {
 
   display: flex;
+
+  @media @phone {
+    flex-direction: column;
+    justify-content: center;
+  }
   padding: 25px;
 
   .info {
