--- a/templates/anon_user.html
+++ b/templates/anon_user.html
@@ -98,7 +98,7 @@
               </div>
               <div class="info">
                 <div class="display-name">The user display name</div>
-                <div class="username">@userhandle</div>
+                <div class="username">@userExtraLonghandle</div>
               </div>
             </div>
           </section>
@@ -110,7 +110,6 @@
         <div class="row">
             <ul class="nav nav-tabs underline-tabs">
               <li class="active"><a href="#tab-prologes" data-toggle="tab">Prologues</a></li>
-              <li><a href="#tab-reading" data-toggle="tab">Reading</a></li>
               <li><a href="#tab-wishlist" data-toggle="tab">Wishlist</a></li>
               <li><a href="#tab-favorites" data-toggle="tab">Favorites</a></li>
             </ul>
