Use bootstrap screen sizes

--- a/templates/admin_group.html
+++ b/templates/admin_group.html
@@ -87,7 +87,7 @@
 <!-- MAIN BODY -->
 <div class="container">
 	<!-- GROUP HEADER-->
-	<div class="col-sm-12 col-md-8">
+	<div class="col-xs-12 col-sm-8">
 		<!-- Here hte group header and info-->
 		<div class="main-group">
 			<!-- Main group needs to be reworked for responsibe layout-->
@@ -108,7 +108,7 @@
 		<!-- <div style="width: 100%;height: 100%;background-color: red;"></div> -->
 
 		<!-- Hidden GROUP WALL: This hides on small screens-->
-		<div class="comments hidden-xs hidden-sm">
+		<div class="comments hidden-xs">
 			<section>
 				<div class="comment-area">
 					<div class="comment-form">
@@ -131,7 +131,7 @@
 	</div>
 
 	<!-- GROUP BOOKS-->
-	<div class="col-sm-12 col-md-4">
+	<div class="col-xs-12 col-sm-4">
 		<!-- Here everything related to books (reading/wishlist/read)-->
 		<!-- Tab panel -->
 		<div class="side-tab-panel">
@@ -233,7 +233,7 @@
 	</div>
 
 	<!-- GROUP WALL -->
-	<div class="col-sm-12 hidden-md hidden-lg">
+	<div class="col-xs-12 hidden-sm hidden-md hidden-lg">
 		<section>
 			<div class="comment-area">
 				<div class="comment-form">
