--- a/css/styles.less
+++ b/css/styles.less
@@ -115,6 +115,16 @@ body {
 	padding-bottom: 20px;
 }
 
+.row p1 {
+	font-family: Lora;
+	text-align: center;
+	color: @contrasting-color;
+	font-size: 18px;
+	margin-left: auto;
+    margin-right: auto;
+	padding: 10px;
+}
+
 .index-search {
 	padding-bottom: 120px;
 }
