--- a/templates/anon_group.html
+++ b/templates/anon_group.html
@@ -1,8 +1,8 @@
-
-<html>
+	<!DOCTYPE html>
+	<html>
 		<head>
 		<meta charset="UTF-8">
-		<link rel='stylesheet/less' href='../css/styles.less'>
+		<link rel="stylesheet/less" href="../css/styles.less">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js" ></script>
@@ -24,18 +24,18 @@
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
 						</button>
-						<a href="#" class="navbar-brand-image"><img src="../img/prologes.png" class="navlogo logo"/></a>
+						<a href="#" class="navbar-brand-image"><img src="../img/prologes.png" alt="logo" class="navlogo logo"/></a>
 				</div>
 				<!-- Collection of nav links, forms, and other content for toggling -->
 				<div id="navbarCollapse" class="collapse navbar-collapse">
 						
 						<ul class="nav navbar-nav navbar-right">
-				<li class='dropdown'>
-					<a data-toggle='dropdown' class='dropdown-toggle' href='#'>
-						<div class='lang-selector'>
+				<li class="dropdown">
+					<a data-toggle="dropdown" class="dropdown-toggle" href="#">
+						<div class="lang-selector">
 							EN				</div>
 					</a>
-					<ul role='menu' class='dropdown-menu'>
+					<ul role="menu" class="dropdown-menu">
 						<li>
 							<a href="#">English</a>
 							</li>
@@ -78,7 +78,7 @@
 							<div class="icon-panel">
 								<div class="icon">
 									<div class="" style="position:relative">
-										<div class="edit-button cancel-edit" id="cancel-edit" tabindex='0' role='button'>
+										<div class="edit-button cancel-edit" id="cancel-edit" tabindex="0" role="button">
 											<i class="fas fa-times edit-icon"></i>
 										</div>
 										<img alt="Group icon" id="club-icon" src="/prologes/img/user_clear.png">
@@ -94,7 +94,7 @@
 									<div class="title editable" id="club-title--editable">
 									</div>
 									<div class="handle" id="club-handle--editable">
-										<span>@theHandleOfTheGroup<span>
+										<span>@theHandleOfTheGroup</span>
 									</div>
 									<div class="description editable" id="club-description--editable">
 									</div>
@@ -128,7 +128,7 @@
 								<!-- Sample member style -->
 								<div class="group-member">
 									<div class="icon">
-										<img class="icon" src='../img/user_clear.png'>
+										<img class="icon" src="../img/user_clear.png" alt="icon">
 									</div>
 									<div class="info">
 										<span class="display-name"><a href="#"><div>User with long long name</div></a></span>
@@ -138,7 +138,7 @@
 		
 								<div class="group-member">
 									<div class="icon">
-										<img class="icon" src='../img/user_clear.png'>
+										<img class="icon" src="../img/user_clear.png" alt="icon">
 									</div>
 									<div class="info">
 										<div class="display-name"><a href="#"><div>Average user X</div></a></div>
@@ -148,7 +148,7 @@
 		
 								<div class="group-member">
 									<div class="icon">
-										<img class="icon" src='../img/user_clear.png'>
+										<img class="icon" src="../img/user_clear.png" alt= "icon">
 									</div>
 									<div class="info">
 										<div class="display-name"><a href="#"><div>Normal user</div></a></div>
@@ -175,7 +175,7 @@
 										<span>The Club's Name</span>
 									</div>
 									<div class="handle">
-										<span>@theHandleOfTheGroup<span>
+										<span>@theHandleOfTheGroup</span>
 									</div>
 									<div class="description" id="club-description">
 										<p>A lengthy description</p>
@@ -229,7 +229,7 @@
 							<!-- Currently reading-->
 							<div class="group-reading">
 								<div class="icon">
-									<img src="../img/book_clear.png">
+									<img src="../img/book_clear.png" alt= "book">
 								</div>
 								<div class="info">
 									<a href="#">Title of the book</a>
@@ -246,7 +246,7 @@
 								<div class="selected-book">
 									<div class="book">
 										<div class="icon">
-											<img src="../img/book_clear.png">
+											<img src="../img/book_clear.png" alt= "book">
 										</div>
 										<div class="info">
 											<a href="#" class="title">Title of the selected book</a>
@@ -264,7 +264,7 @@
 									<!-- upcoming books in the wishlist -->
 									<div class="book">
 										<div class="icon">
-											<img src="../img/book_clear.png">
+											<img src="../img/book_clear.png" alt= "book">
 										</div>
 										<div class="info">
 											<span class="title">Title of the book</span>
@@ -274,7 +274,7 @@
 									<!-- Sample books -->
 									<div class="book">
 										<div class="icon">
-											<img src="../img/book_clear.png">
+											<img src="../img/book_clear.png" alt= "book">
 										</div>
 										<div class="info">
 											<span class="title">Title of the book</span>
@@ -284,7 +284,7 @@
 									<!-- Sample books -->
 									<div class="book">
 										<div class="icon">
-											<img src="../img/book_clear.png">
+											<img src="../img/book_clear.png" alt= "book">
 										</div>
 										<div class="info">
 											<span class="title">Title of the book</span>
@@ -294,7 +294,7 @@
 									<!-- Sample books -->
 									<div class="book">
 										<div class="icon">
-											<img src="../img/book_clear.png">
+											<img src="../img/book_clear.png" alt= "book">
 										</div>
 										<div class="info">
 											<span class="title">Title of the book</span>
